--- a/POZIOM2_HTML/sprawdzian/horizontal_form2.html
+++ b/POZIOM2_HTML/sprawdzian/horizontal_form2.html
@@ -26,19 +26,19 @@
 
     #adr,
     #pass,
-    #button{
+    #button {
         background-color: lightblue;
         border: 2px solid cadetblue;
         font-family: Poor Richard;
         font-size: large;
         padding: 5px 10px 5px 10px;
-        
+
     }
+
     #adr,
-    #pass{
-        input:hover 
-        color aliceblue;
-        
+    #pass {
+        input: hover color aliceblue;
+
     }
 </style>
 
@@ -53,24 +53,25 @@
 
             <tr>
                 <td>Hasło:</td>
-                <td><input type="password" name="pass" id="pass" placeholder="minimum 8 znaków" style="width: 100%; "></td>
+                <td><input type="password" name="pass" id="pass" placeholder="minimum 8 znaków" style="width: 100%; ">
+                </td>
             </tr>
 
             <tr>
                 <td>Rola:</td>
-                <td> <input type="radio" name="rolaa" id="a" checked> <label for="rolaa">kandydat</label>
-                    <input type="radio" name="rolab" id="b"> <label for="rolab">aplikant</label>
-                    <input type="radio" name="rolac" id="c"> <label for="rolac">kursant</label>
-                    <input type="radio" name="rolad" id="d"> <label for="rolad">absolwent</label>
+                <td> <input type="radio" name="rolaa" id="a" checked> <label for="a">kandydat</label>
+                    <input type="radio" name="rolab" id="b"> <label for="b">aplikant</label>
+                    <input type="radio" name="rolac" id="c"> <label for="c">kursant</label>
+                    <input type="radio" name="rolad" id="d"> <label for="d">absolwent</label>
                 </td>
             </tr>
 
             <tr>
                 <td>Grupa:</td>
-                <td> <input type="checkbox" name="wio" id="wio"> <label for="wio">wiosenna</label>
-                    <input type="checkbox" name="let" id="let"><label for="let">letnia</label>
-                    <input type="checkbox" name="jes" id="jes"><label for="jes">jesienna</label>
-                    <input type="checkbox" name="zim" id="zim"><label for="zim">zimowa</label>
+                <td> <input type="checkbox" name="wios" id="wio"> <label for="wio">wiosenna</label>
+                    <input type="checkbox" name="letn" id="let"><label for="let">letnia</label>
+                    <input type="checkbox" name="jesi" id="jes"><label for="jes">jesienna</label>
+                    <input type="checkbox" name="zimo" id="zim"><label for="zim">zimowa</label>
                 </td>
             </tr>
 
