--- a/4c1/paragraf.html
+++ b/4c1/paragraf.html
@@ -16,16 +16,18 @@
 
 <body>
     <h1>To jest nagłówek pierwszego stopnia</h1>
-    <em><p>paragraf 1</p></em>
+    <em>
+        <p>paragraf 1</p>
+    </em>
     <p>paragraf 2</p>
-    <div>Oto blok tekstu choć troszkę inny niż paragraf</div>
+    <div class="pierwszy">Oto blok tekstu choć troszkę inny niż paragraf</div>
     <p>paragraf 4</p>
     <ul>
         <li><em>pozycja </em>1</li>
         <li>pozycja 2</li>
-        <li><em>pozycja 3   </em></li>
+        <li><em>pozycja 3 </em></li>
     </ul>
-    <p>paragraf 5</p>
+    <p class="pierwszy">paragraf 5</p>
 </body>
 
 </html>
