--- a/4c1/wizytówka.html
+++ b/4c1/wizytówka.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/wizytowka.css">
 </head>
+
 <body>
-    <div><p>Filip Kołomański</p><br></div>
+    <div>
+        <p id="imie">Filip Kołomański</p><br>
+        <p id="firma">Firma: Filip&Co</p><br>
+        <h2>Kontakt:</h2>
+        <p>Tel. 123 456 789</p>
+        <p>Adres: ul. Warszawska69B</p>
+        <p>Email: filip&co@wp.pl</p>
+        <p>NIP: 123-456-78-90</p>
+        <h3></h3>
+    </div>
 </body>
+
 </html>
