--- a/4c1/Kołomański_Filip.html
+++ b/4c1/Kołomański_Filip.html
@@ -23,11 +23,11 @@
             <li>skrypt połączenia z bazą.</li>
         </ul>
         <h3>Forma egzaminu</h3>
-        <p>Egzamin składa się z <span class="gren">części teoretycznej,</span> obejmującej pytania testowe, oraz <span class="gren">części
+        <p>Egzamin składa się z <span class="gren">części teoretycznej,</span> obejmującej pytania testowe, oraz <span
+                class="gren">części
                 praktycznej,</span> w której uczniowie
-            realizują konkretne zadania programistyczne. Aby zdać, należy uzyskać co najmniej <span class="red">50%
-                punktów w części
-                teoretycznej</span> i co
+            realizują konkretne zadania programistyczne. Aby zdać, należy uzyskać co najmniej <span
+                class="red">50%punktów w częściteoretycznej</span> i co
             najmniej<span class="red">75% w części praktycznej egzaminu.</span></p>
     </div>
 </body>
