--- a/4c1/modyfikowanie_linkow.html
+++ b/4c1/modyfikowanie_linkow.html
@@ -29,7 +29,7 @@
         <li><a id="hover" href="https://developer.mozilla.org/en-US/docs/Web/CSS/:hover"
                 target="_blank">:hover-najechanie na link</a></li>
         <li><a id="focus" href="https://developer.mozilla.org/en-US/docs/Web/CSS/:focus" target="_blank">:focus- :active
-                + :visited </a></li>></ol>
+                + :visited </a></li></ol>
         <h1>Formularze</h1>
         <form action="modyfikowanie_linkow.html" method="post">
             <input type="text" name="text" id="text">
