--- a/4c1/nowe zadania/tabela.html
+++ b/4c1/nowe zadania/tabela.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <link rel="stylesheet" href="style2/tabela.css">
 
 <body>
-    <h1>stylizacja tabel</h1>
-    <p>za pomocą znanych już właściwości</p>
+    <div>
+        <h1>stylizacja tabel</h1>
+        <p>za pomocą znanych już właściwości</p>
+    </div>
     <table>
         <tr>
             <th>znaczenie</th>
@@ -18,43 +23,43 @@
             <th>przykładowa wartość</th>
         </tr>
         <tr>
-            <td>szerokość tabeli</td>
-            <td>width</td>
+            <td class="font">szerokość tabeli</td>
+            <td class="cour">width</td>
             <td>600px</td>
         </tr>
-        <tr>
-            <td>odległość między obramowaniem a zawartością komórki</td>
-            <td>padding</td>
+        <tr class="color">
+            <td class="font">odległość między obramowaniem a zawartością komórki</td>
+            <td class="cour">padding</td>
             <td>10px</td>
         </tr>
         <tr>
-            <td>pisanie nagłówków wielkimi literami</td>
-            <td>text-transform</td>
+            <td class="font">pisanie nagłówków wielkimi literami</td>
+            <td class="cour">text-transform</td>
             <td>uppercase</td>
         </tr>
-        <tr>
-            <td>dodatkowa modyfikacja wyglądu nagłówka</td>
-            <td>letter-spacing</td>
+        <tr class="color">
+            <td class="font">dodatkowa modyfikacja wyglądu nagłówka</td>
+            <td class="cour">letter-spacing</td>
             <td>0.1em</td>
         </tr>
         <tr>
-            <td>określenie tekstu w komórce</td>
-            <td>border-top/bottom</td>
+            <td class="font">określenie tekstu w komórce</td>
+            <td class="cour">border-top/bottom</td>
             <td>2px solid red</td>
         </tr>
-        <tr>
-            <td>wyrównanie tekstu w komórce</td>
-            <td>text-align</td>
+        <tr class="color">
+            <td class="font">wyrównanie tekstu w komórce</td>
+            <td class="cour">text-align</td>
             <td>center</td>
         </tr>
         <tr>
-            <td>kolorowanie wierszy</td>
-            <td>background-color</td>
+            <td class="font">kolorowanie wierszy</td>
+            <td class="cour">background-color</td>
             <td>lightblue</td>
         </tr>
-        <tr>
-            <td>podkreślenie wiersza, w którym aktualnie znajduje się</td>
-            <td>:hover</td>
+        <tr class="color">
+            <td class="font">podkreślenie wiersza, w którym aktualnie znajduje się</td>
+            <td class="cour">:hover</td>
 
         </tr>
 
