--- a/4c1/nowe zadania/zadanie_lato_jesien.html
+++ b/4c1/nowe zadania/zadanie_lato_jesien.html
@@ -11,10 +11,10 @@
 <body>
     <div class="kontener">
         <div class="lato">
-            <p>LATO</p> <div class="like1">Lubię</div>
+            <p>LATO</p> <div class="like1">LUBIĘ</div>
         </div><!--
         --><div class="jesien">
-            <p>JESIEŃ</p> <div class="like2">Lubię</div>
+            <p>JESIEŃ</p> <div class="like2">LUBIĘ</div>
         </div>
     </div>
 
