--- a/4c1/nowe zadania/zadanie_kola.html
+++ b/4c1/nowe zadania/zadanie_kola.html
@@ -11,10 +11,10 @@
         <h1>PRACA NA LEKCJI</h1>
         <p>Wykonaj to co widzisz!!!</p>
         <div class="contener2">
-            <div class="div1">1</div>
-            <div class="div2">2</div>
-            <div class="div3">3</div>
-            <div class="div4">4</div>
+            <div class="div1"></div>
+            <div class="div2"></div>
+            <div class="div3"></div>
+            <div class="div4"></div>
         </div>
     </div>
 </body>
