--- a/4c1/nowe zadania/zadanie15.html
+++ b/4c1/nowe zadania/zadanie15.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style2/zadanie15.css">
 </head>
+
 <body>
     <h1>właściwości FLOAT</h1>
-    <p><span>paragraf 1</span> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea corrupti, earum unde qui repellendus aliquid.</p>
-    <p><span>paragraf 2</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia voluptatem molestias et, repellendus velit consectetur perspiciatis! Quia nemo repellendus illum!</p>
-    <p><span>paragraf 3</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, consequuntur?</p>
-    <p><span>paragraf 4</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quis nulla at numquam est impedit, laborum praesentium laboriosam perspiciatis fuga in natus quibusdam sequi dolore?</p>
-    <p><span>paragraf 5</span> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum molestiae minima officiis.</p>
-    <p><span>paragraf 6</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia voluptatem molestias et, repellendus velit consectetur perspiciatis! Quia nemo repellendus illum!</p>
+    <div>
+        <p><span>paragraf 1</span> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea corrupti, earum unde qui
+            repellendus aliquid.</p>
+        <p class="clear"><span>paragraf 2</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia voluptatem
+            molestias et,
+            repellendus velit consectetur perspiciatis! Quia nemo repellendus illum!</p>
+        <p class="clear" ><span>paragraf 3</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, consequuntur?</p>
+        <p class="clear-top"><span>paragraf 4</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quis
+            nulla at
+            numquam est impedit, laborum praesentium laboriosam perspiciatis fuga in natus quibusdam sequi dolore?</p>
+        <p><span>paragraf 5</span> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum molestiae minima
+            officiis.</p>
+        <p><span>paragraf 6</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia voluptatem
+            molestias et,
+            repellendus velit consectetur perspiciatis! Quia nemo repellendus illum!</p>
+    </div>
+
 </body>
+
 </html>
