--- a/4c1/nowe zadania/zadanie16_2.html
+++ b/4c1/nowe zadania/zadanie16_2.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1><img src="./pizza.jpeg" alt="tytul" class="tytul">GAZETA tekst lorem</h1>
+            <h1><img src="./fifa.jpg" alt="tytul" class="tytul">GAZETA tekst lorem</h1>
         </div>
         <hr>
         <h2>TYTUŁ LOREM</h2>
@@ -26,7 +26,7 @@
 
             <div>
                 <h3>Lorem ipsum dolor sit amet.</h3>
-                <img src="./pizza.jpeg" alt="pizza" class="img1">
+                <img src="./volk.jpg" alt="pizza" class="img1">
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate quasi sed voluptas soluta minus
                     odio facilis quos nesciunt incidunt at blanditiis, odit magni fugiat saepe aliquam esse similique
@@ -56,8 +56,9 @@
                 </p>
             </div>
             <div>
-                <img src="./pizza.jpeg" alt="pizza" class="imgp1">
+                
                 <h3>Lorem ipsum dolor sit amet.</h3>
+                <img src="./kebeb.jpg" alt="pizza" class="imgp1">
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque repellendus labore voluptas
                     voluptatem,
@@ -81,6 +82,25 @@
                     aperiam. Fuga laboriosam sequi, perspiciatis eius expedita, facere culpa quia accusamus assumenda
                     veniam, voluptatibus debitis consequatur accusantium eos ratione. Nulla, provident dicta. Eaque,
                     aliquam
+                    at? Cumque debitis quo ut ex eum consequuntur vitae error aut aspernatur corporis excepturi, facilis
+                    dolorum, natus temporibus recusandae voluptates fugiat porro, nam voluptate culpa dolores assumenda
+                    sunt. Dolor quo deserunt reprehenderit saepe expedita facilis, consequuntur cupiditate neque, ea
+                    quod
+                    <img src="./kostka.jpg" alt="pizza" class="img1">
+                    laudantium distinctio iste dicta maxime at libero ducimus rerum similique!
+                </p>
+            </div>
+            <div>
+                
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque repellendus labore voluptas
+                    voluptatem,
+                    culpa provident asperiores molestias. Fugiat sint earum obcaecati quibusdam ea harum excepturi quam
+                    aperiam. Fuga laboriosam sequi, perspiciatis eius expedita, facere culpa quia accusamus assumenda
+                    veniam, voluptatibus debitis consequatur accusantium eos ratione. Nulla, provident dicta. Eaque,
+                    aliquam
+                    <img src="./bigos.webp" alt="pizza" class="img1">
                     at? Cumque debitis quo ut ex eum consequuntur vitae error aut aspernatur corporis excepturi, facilis
                     dolorum, natus temporibus recusandae voluptates fugiat porro, nam voluptate culpa dolores assumenda
                     sunt. Dolor quo deserunt reprehenderit saepe expedita facilis, consequuntur cupiditate neque, ea
@@ -98,23 +118,7 @@
                     aperiam. Fuga laboriosam sequi, perspiciatis eius expedita, facere culpa quia accusamus assumenda
                     veniam, voluptatibus debitis consequatur accusantium eos ratione. Nulla, provident dicta. Eaque,
                     aliquam
-                    at? Cumque debitis quo ut ex eum consequuntur vitae error aut aspernatur corporis excepturi, facilis
-                    dolorum, natus temporibus recusandae voluptates fugiat porro, nam voluptate culpa dolores assumenda
-                    sunt. Dolor quo deserunt reprehenderit saepe expedita facilis, consequuntur cupiditate neque, ea
-                    quod
-                    laudantium distinctio iste dicta maxime at libero ducimus rerum similique!
-                </p>
-            </div>
-            <div>
-                <img src="./pizza.jpeg" alt="pizza" class="img1">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque repellendus labore voluptas
-                    voluptatem,
-                    culpa provident asperiores molestias. Fugiat sint earum obcaecati quibusdam ea harum excepturi quam
-                    aperiam. Fuga laboriosam sequi, perspiciatis eius expedita, facere culpa quia accusamus assumenda
-                    veniam, voluptatibus debitis consequatur accusantium eos ratione. Nulla, provident dicta. Eaque,
-                    aliquam
+                    <img src="./kebeb.jpg" alt="pizza" class="img2">
                     at? Cumque debitis quo ut ex eum consequuntur vitae error aut aspernatur corporis excepturi, facilis
                     dolorum, natus temporibus recusandae voluptates fugiat porro, nam voluptate culpa dolores assumenda
                     sunt. Dolor quo deserunt reprehenderit saepe expedita facilis, consequuntur cupiditate neque, ea
@@ -139,7 +143,7 @@
                 </p>
             </div>
             <div>
-                <img src="./pizza.jpeg" alt="pizza" class="img2">
+                <img src="./kostka.jpg" alt="pizza" class="imgp1">
                 <h3>Lorem ipsum dolor sit amet.</h3>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque repellendus labore voluptas
@@ -148,13 +152,14 @@
                     aperiam. Fuga laboriosam sequi, perspiciatis eius expedita, facere culpa quia accusamus assumenda
                     veniam, voluptatibus debitis consequatur accusantium eos ratione. Nulla, provident dicta. Eaque,
                     aliquam
+                    <img src="./bigos.webp" alt="pizza" class="img1">
                     at? Cumque debitis quo ut ex eum consequuntur vitae error aut aspernatur corporis excepturi, facilis
                     dolorum, natus temporibus recusandae voluptates fugiat porro, nam voluptate culpa dolores assumenda
                     sunt. Dolor quo deserunt reprehenderit saepe expedita facilis, consequuntur cupiditate neque, ea
                     quod
                     laudantium distinctio iste dicta maxime at libero ducimus rerum similique!
                 </p>
-                <img src="./pizza.jpeg" alt="pizza" class="img1">
+                <img src="./volk.jpg" alt="pizza" class="img1">
             </div>
         </div>
     </div>
