--- a/4c1/nowe zadania/zadanie16_2.html
+++ b/4c1/nowe zadania/zadanie16_2.html
@@ -20,7 +20,7 @@
 
         
 
-        <!-- <div class="right"><img src="./pizza.jpeg" alt="pizza" class="imgp"></div> -->
+        <div class="right"><img src="./pizza.jpeg" alt="pizza" class="right"></div>
 
         <div class="content">
 
