--- a/4c1/nowe zadania/projekt_18.html
+++ b/4c1/nowe zadania/projekt_18.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style2/projekt18.css">
 </head>
 
 <body>
@@ -13,79 +14,80 @@
         <a href="">Procesory</a>
         <a href="">RAM</a>
         <a href="">Grafika</a>
-        <p>Podzespoły komputerowe</p>
+        <h1>Podzespoły komputerowe</h1>
     </header>
+    
     <main>
-        <p>Dzisiejsze promocje</p>
+        <h2>Dzisiejsze promocje</h2>
         <table>
             <tr>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th>NUMER</th>
+                <th>NAZWA PODZESPOŁU</th>
+                <th>OPIS</th>
+                <th>CENA</th>
             </tr>
             <tr>
+                <td>2</td>
+                <td>core i3-6300</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="price">575</td>
             </tr>
             <tr>
+                <td>4</td>
+                <td>X6 FX-6350</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="price">380</td>
             </tr>
             <tr>
+                <td>5</td>
+                <td>Savage</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="price">535</td>
             </tr>
             <tr>
+                <td>6</td>
+                <td>Savage</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="price">150</td>
             </tr>
             <tr>
+                <td>7</td>
+                <td>Signature</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="price">250</td>
             </tr>
             <tr>
+                <td>9</td>
+                <td>GeForce 210</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="price">145</td>
             </tr>
             <tr>
+                <td>10</td>
+                <td>WD Black</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="price">315</td>
             </tr>
             <tr>
+                <td>11</td>
+                <td>WD Blue</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="price">195</td>
             </tr>
             <tr>
+                <td>12</td>
+                <td>AHD650-1TU3-CBK</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="price">210</td>
             </tr>
         </table>
     </main>
     <footer>
-        <img src="" alt="">
+        <img src="./fifa.jpg" alt="">
         <h3>Nasz sklep Komputerowy</h3>
         <p>zadzwoń: 601 602 603</p>
         <p>storne wykonał:0000000</p>
-        <p>Współpracujemy z hurtownią</p><a href="">edata</a>
+        <p>Współpracujemy z hurtownią <a href="">edata</a></p>
     </footer>
 </body>
 
